src/objects/Resource_Availability_Modifier__c.object
<CustomObject>
    <description>Resource Availability Modifier</description>
    <fields>
        <fullName>Activity__c</fullName>
        <description>Resource Availability Modifier Activity</description>
        <label>Activity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Resource_Availability_Modifier_Activity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>More_Information__c</fullName>
        <description>More Information</description>
        <label>More Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Resource</description>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Resource Availability Modifiers</relationshipLabel>
        <relationshipName>Resource_Availability_Modifiers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Resource_Modifier_Availability_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Availability_per_Day__c</fullName>
        <description>Time Availability per Day</description>
        <label>Time Availability per Day</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Working_Hours</valueSetName>
        </valueSet>
    </fields>
    <label>Resource Availability Modifier</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RMA-{0000}</displayFormat>
        <label>ResourceModifier Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Availability Modifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>